deploy/edge/kustomize/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: truss-demo
spec:
  gateways:
    - default-gateway.istio-system
  hosts:
    - "truss-demo.nonprod-cmh.truss.bridgeops.sh"
  http:
    - route:
        - destination:
            port:
              number: 80
            host: truss-demo.truss-demo-edge.svc.cluster.local
      match:
        - uri:
            prefix: "/"
